add nice css formatting throughout the website
Lots of stuff done in this one, mainly practicing some css formatting.
- removed the redundant paragraph tags in the Steps ordered lists since
it can be done in css now.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes Homepage</title>
+        <link rel="stylesheet" href="./styles/styles.css" />
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <img src="./images/cookbook-color.gif" alt="A colored image of a cookbook with a wooden spoon and glass measuring jug accompanying.">
-        <p><em>Image sourced from https://inspirationlane.blogspot.com/2007/08/cooking-state.html</em></p>
-        <p><a href="./recipes/crusty-dutch-oven-bread.html">Crusty Dutch Oven Bread</a></p>
-        <p><a href="./recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a></p>
-        <p><a href="./recipes/oven-scrambled-eggs.html">Oven Scrambled Eggs</a></p>
+        <p class="reference"><em>Image sourced from https://inspirationlane.blogspot.com/2007/08/cooking-state.html</em></p>
+        <p class="link-text"><a href="./recipes/crusty-dutch-oven-bread.html">Crusty Dutch Oven Bread</a></p>
+        <p class="link-text"><a href="./recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a></p>
+        <p class="link-text"><a href="./recipes/oven-scrambled-eggs.html">Oven Scrambled Eggs</a></p>
     </body>
 </html>
