--- a/recipes/crusty-dutch-oven-bread.html
+++ b/recipes/crusty-dutch-oven-bread.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Crusty Dutch Oven Bread</title>
+        <link rel="stylesheet" href="../styles/styles.css" />
     </head>
     <body>
         <h1>Crusty Dutch Oven Bread</h1>
         <img src="../images/crusty-dutch-oven-bread.jpg" alt="A picture of freshly baked crusty dutch oven bread.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
-        <p><em>Recipe by Stacey, recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
+        <p class="reference"><em>Recipe by Stacey, recipe and photo sourced from https://www.allrecipes.com/recipe/281201/crusty-dutch-oven-bread/</em></p>
         
         <h2>Description</h2>
         <p>An incredibly easy, crusty white bread cooked inside a Dutch oven.</p>
@@ -22,50 +23,42 @@
             <li>2 teaspoons salt</li>
             <li>1 teaspoon dry active yeast</li>
         </ul>
-        <!--empty paragraphs added in between list elements for better readability-->
         <h2>Steps</h2>
         <ol>
             <li>
                 Pour bread flour into the bowl of an electric stand mixer and add water, followed by salt. 
                 Sprinkle yeast over the surface and allow to dissolve, about 5 minutes.
             </li>
-            <p></p>
             <li>
                 Mix on medium speed using the paddle attachment until the dough comes together.
                 Replace the paddle with a dough hook. Continue mixing until dough is smooth and elastic, about 10 minutes.
             </li>
-            <p></p>
             <li>Cover the bowl with plastic wrap and allow to the dough to rise to about twice its size, 30 to 45 minutes.
                 Push a finger into the dough. The dough should give some resistance, but not spring back. 
                 If it springs back, let it rise longer.
             </li>
-            <p></p>
             <li>
                 Turn dough out onto a floured surface and punch down to expel excess gas and redistribute the yeast.
                 Cover with a clean dish towel and let rest for 10 to 15 minutes.
             </li>
-            <p></p>
             <li>
                 Shape the dough into a boule by pushing back and forth on the counter in a circular motion until you have a round, smooth ball.
                 Cover dough with a clean dish towel and allow to rise, about 1 hour.
             </li>
-            <p></p>
             <li>
                 Preheat the oven to 450 degrees F (230 degrees C). Grease a Dutch oven.
             </li>
-            <p></p>
             <li>
                 Slice a very shallow "X" into the top of the bread with a sharp knife to help it expand while baking.
                 Place loaf into the prepared Dutch oven and cover with the lid.
             </li>
-            <p></p>
             <li>
                 Bake in the preheated oven for 10 minutes. Reduce temperature to 375 degrees F (190 degrees C) and continue to bake, covered, for 20 minutes.
                 Remove the lid and continue baking until deep golden, 25 to 30 minutes.
             </li>
         </ol>
         <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
-        <p><a href="#">Go to the top of this page</a></p>
-        <p><a href="../index.html">Return to the home page</a></p>
+        <p class="link-text"><a href="#">Go to the top of this page</a></p>
+        <p class="link-text"><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
