--- a/recipes/grilled-tomahawk-steak.html
+++ b/recipes/grilled-tomahawk-steak.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Grilled Tomahawk Steak</title>
+        <link rel="stylesheet" href="../styles/styles.css" />
     </head>
     <body>
         <h1>Grilled Tomahawk Steak</h1>
         <img src="../images/grilled-tomahawk.jpg" alt="A picture of grilled tomahawk steak on a bed of rice.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
-        <p><em>Recipe by Ashley Elizabeth, recipe and photo sourced from https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957</em></p>
+        <p class="reference"><em>Recipe by Ashley Elizabeth, recipe and photo sourced from https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957</em></p>
 
         <h2>Description</h2>
         <p>This grilled tomahawk steak recipe is a showstopper, ideal for sharing with friends and family. This reverse-seared steak is cooked to perfection with an unctuous compound butter filled with shallots, garlic, and chives.</p>
         <p>I like to use a Bluetooth-enabled meat thermometer to help me achieve the perfect medium-rare internal temperature.</p>
         <!--this recipe has two separate ingredients lists, one for the steak rub and steak, and another for the compound butter-->
         <h2>Ingredients</h2>
+        <div class="steak-ingredients">
         <h3>Steak Rub and Steak:</h3>
         <ul>
             <li>1 tablespoon brown sugar</li>
@@ -31,57 +33,47 @@
             <li>1 tablespoon fresh chives, chopped</li>
             <li>2 teaspoons reserved steak rub</li>
         </ul>
-        <!--empty paragraphs put in between list elements for increased readability-->
+        </div>
         <h2>Steps</h2>
         <ol>
             <li>
                 To make steak rub, place brown sugar, Montreal steak seasoning, garlic powder, and onion powder in a small airtight container; shake or stir to combine.
                 Set aside 2 teaspoons steak rub to use in compound butter.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Place steak on a half sheet pan, and rub steak on top, bottom, and sides with remaining steak rub until well coated.
                 Place steak, uncovered, in the refrigerator to dry-brine overnight.
-            </li>
-            <p></p>
+            </li>           
             <li>
                 For compound butter, place butter, shallot, garlic, chives, and the reserved 2 teaspoons steak rub in a small bowl.
                 Mash together with a fork until evenly combined. Spoon butter into a small airtight container, cover, and refrigerate until ready to use.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Remove steak from the refrigerator 1 hour before cooking to take the chill off.
                 It will cook on the sheet pan that you used for dry-brining. 
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Preheat the oven to 300 degrees F (150 degrees C). The reverse sear method is used to cook this big steak, so you will need an instant-read thermometer.
                 If you are using a digital meat thermometer, set the internal temperature to 110 degrees F (43 degrees C).
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Bake steak on the sheet pan in the preheated oven until an instant-read thermometer inserted into the center reads 110 degrees F (43 degrees C), about 45 minutes.
                 Begin checking the temperature at 30 minutes. 
-            </li>
-            <p></p>
+            </li>            
             <li>
                 During the last 15 to 20 minutes of cooking time, preheat an outdoor grill for high heat and lightly oil the grate.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 When steak reaches an internal temperature of  110 degrees F (43 degrees C) measured with an instant-read thermometer, remove it from the oven.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Grill steak directly on the grates of the preheated grill; sear on both sides, about 2 minutes per side.
                 This is a fatty piece of meat, so be mindful of flame flare-ups. The internal temperature should now read 125 to 135 degrees F (51 to 57 degrees C) for medium rare.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Remove steak from the grill, and smear compound butter over top. Let butter melt into the steak, heating up the fresh garlic, shallots, and chives.
                 Let steak rest for 10 minutes.
-            </li>
-            <p></p>
+            </li>            
             <li>
                 Slice steak and serve with accumulated juices and melted butter. Be sure to serve the bone–someone will want to gnaw on it! 
             </li>
@@ -89,14 +81,16 @@
 
         <!--this recipe also has a cooks note at the end, it will appear at the same level as the other segments (<h2>)-->
         <h2>Cook's Note:</h2>
-        <p>
-            To make this an easy meal, I like to serve the steak on a platter of baked rice, and a chopped wedge salad with Bob's Blue Cheese Dressing! You can make the baked rice the day before, then reheat it with your steak. And the wedge salad can be assembled in the morning, and kept in the fridge until you're ready to serve.
-        </p>
-        <p>
-            Searing the steak on each side produces that crispy crust without overcooking the steak.
-        </p>
+        <div class="cooks-note">
+            <p>
+                To make this an easy meal, I like to serve the steak on a platter of baked rice, and a chopped wedge salad with Bob's Blue Cheese Dressing! You can make the baked rice the day before, then reheat it with your steak. And the wedge salad can be assembled in the morning, and kept in the fridge until you're ready to serve.
+            </p>
+            <p>
+                Searing the steak on each side produces that crispy crust without overcooking the steak.
+            </p>
+        </div>
         <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
-        <p><a href="#">Go to the top of this page</a></p>
-        <p><a href="../index.html">Return to the home page</a></p>
+        <p class="link-text"><a href="#">Go to the top of this page</a></p>
+        <p class="link-text"><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
