--- a/recipes/oven-scrambled-eggs.html
+++ b/recipes/oven-scrambled-eggs.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Oven Scrambled Eggs</title>
+        <link rel="stylesheet" href="../styles/styles.css" />
     </head>
     <body>
         <h1>Oven Scrambled Eggs</h1>
         <img src="../images/oven-scrambled-eggs.jpg" alt="A picture of freshly baked oven scrambled eggs in a glass baking pan.">
         <!--image and recipe acquired from external source an should be attributed for posterity-->
-        <p><em>Recipe by Erin, recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
+        <p class="reference"><em>Recipe by Erin, recipe and photo sourced from https://www.allrecipes.com/recipe/57459/oven-scrambled-eggs/</em></p>
 
         <h2>Description</h2>
         <p>These baked scrambled eggs are light and fluffy and are a snap to put together for a big crowd.</p>
@@ -22,27 +23,23 @@
             <li>2 1/4 teaspons salt</li>
             <li>2 1/2 cups milk</li>
         </ul>
-        <!--empty paragraphs added in between each list element to increase readability-->
         <h2>Steps</h2>
         <ol>
             <li>
                 Preheat the oven to 350 degrees F (175 degrees C).
             </li>
-            <p></p>
             <li>
                 Pour melted butter into a 9x13-inch glass baking dish (or similar).
             </li>
-            <p></p>
             <li>
                 Whisk together eggs and salt in a large bowl until well-blended. Gradually whisk in milk. Pour egg mixture into the buttered dish.
             </li>
-            <p></p>
             <li>
                 Bake uncovered in the preheated oven for 10 minutes. Stir egg mixture and continue to bake until eggs are set, 10 to 15 minutes more.
             </li>
         </ol>
         <!--these links seemed to be used frequently by other students, probably very useful to have for site navigation-->
-        <p><a href="#">Go to the top of this page</a></p>
-        <p><a href="../index.html">Return to the home page</a></p>
+        <p class="link-text"><a href="#">Go to the top of this page</a></p>
+        <p class="link-text"><a href="../index.html">Return to the home page</a></p>
     </body>
 </html>
